# novadb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
src/novadb/: __init__.py  cli.py  config.py  py.typed  utils.py
src/novadb/constants/: __init__.py  af3_constants.py  atoms.py  bonds.py  elements.py  residues.py
src/novadb/data/parsers/: mmcif_parser.py  structure.py
src/novadb/pipeline/: __init__.py  pipeline.py
src/novadb/processing/: __init__.py  optimized.py  transforms.py  validation.py
src/novadb/processing/conformer/: __init__.py
src/novadb/processing/cropping/: __init__.py  cropping.py  transforms.py
src/novadb/processing/curation/: __init__.py  bioassembly.py  clustering.py  distillation.py  filtering.py  interface_clustering.py  sampling.py  transforms.py
src/novadb/processing/features/: __init__.py  bond_features.py  features.py  reference_features.py  transforms.py
src/novadb/processing/tokenization/: __init__.py  tokenizer.py
src/novadb/search/: __init__.py
src/novadb/search/msa/: __init__.py  hhblits.py  jackhmmer.py  msa.py  msa_processor.py  nhmmer.py  processing.py
src/novadb/search/templates/: __init__.py  template_processing.py  template_search.py
src/novadb/storage/: __init__.py  backends.py  distributed.py  serialization.py  streaming.py
tests/: __init__.py  conftest.py  test_pipeline.py
