# NovaDB setup.cfg
# Legacy configuration for tools that don't read pyproject.toml
# Most settings are now in pyproject.toml

[metadata]
name = novadb
version = attr: novadb.__version__
description = AlphaFold3-style dataset curation and feature engineering pipeline
long_description = file: README.md
long_description_content_type = text/markdown
author = NovaDB Team
author_email = contact@novadb.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    alphafold
    protein structure
    machine learning
    bioinformatics

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
novadb =
    py.typed
    *.yaml
    *.json

[options.entry_points]
console_scripts =
    novadb = novadb.cli:main
    novadb-pipeline = novadb.pipeline.runner:main
    novadb-download = novadb.data.download:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .eggs,
    *.egg-info

[bdist_wheel]
universal = 0
